@@ -1,27 +1,0 @@
-#  This file is part of systemd.
-#
-#  systemd is free software; you can redistribute it and/or modify it
-#  under the terms of the GNU Lesser General Public License as published by
-#  the Free Software Foundation; either version 2.1 of the License, or
-#  (at your option) any later version.
-
-[Unit]
-Description=Journal Service
-Documentation=man:journald.service(8) man:journald.conf(5)
-DefaultDependencies=no
-Requires=journald.socket
-After=journald.socket syslog.socket
-Before=sysinit.target
-
-[Service]
-ExecStart=@rootlibexecdir@/journald
-Restart=always
-RestartSec=0
-NotifyAccess=all
-StandardOutput=null
-CapabilityBoundingSet=CAP_SYS_ADMIN CAP_DAC_OVERRIDE CAP_SYS_PTRACE CAP_SYSLOG CAP_AUDIT_CONTROL CAP_CHOWN CAP_DAC_READ_SEARCH CAP_FOWNER CAP_SETUID CAP_SETGID
-WatchdogSec=1min
-
-# Increase the default a bit in order to allow many simultaneous
-# services being run since we keep one fd open per service.
-LimitNOFILE=16384
